--- a/cartuning/src/app/home/home.component.html
+++ b/cartuning/src/app/home/home.component.html
@@ -26,82 +26,85 @@
     
     <!-- 6 section -->
     <div class='row no-gutter home-section-full'  style="background-image: url(../../assets/dotted-world-map.png); background-size: contain; background-repeat: no-repeat;">
-        <div class="row no-gutter home-section" >
-            <div class='col-lg-8' style="justify-content: center; align-items: center; margin:0 auto">
-                <div style="font-size: 42px; font-weight: bold;">
-                    Precise <i style="color: #E81C2E;">tunning</i><br>
-                    for better cars.
+        
+        <div class="section">
+            <div class="row no-gutter" >
+                <div class='col-lg-8'>
+                    <div style="font-size: 42px; font-weight: bold;">
+                        Precise <i style="color: #E81C2E;">tunning</i><br>
+                        for better cars.
+                    </div>
+                    <div style="font-size:20px; word-wrap: break-word; margin: 20px 0px;">
+                        <mat-list>
+                            <mat-list-item style="padding: 10px 0">
+                                <span><fa-icon [icon]='faCheckCircle' style="color: #E81C2E; padding:0 20px 0 0"></fa-icon></span>    
+                                <span> Vrei sa-ti fuga masina ca un lamborghini?</span>
+                            </mat-list-item>
+                            <mat-list-item style="padding: 10px 0">
+                                <span><fa-icon [icon]='faCheckCircle' style="color: #E81C2E;padding:0 20px 0 0"></fa-icon></span>    
+                                <span> Nu esti multumit cu masina, si vrei sa o strici de tot?</span>
+                            </mat-list-item>
+                            <mat-list-item style="padding: 10px 0">
+                                <span><fa-icon [icon]='faCheckCircle' style="color: #E81C2E;padding:0 20px 0 0"></fa-icon></span>    
+                                <span> Acum este momentul! Nu ezita sa ne contactati  </span>
+                            </mat-list-item>
+                            <mat-list-item style="padding: 10px 0">
+                                <span><fa-icon [icon]='faCheckCircle' style="color: #E81C2E;padding:0 20px 0 0"></fa-icon></span>    
+                                <span> Da da  </span>
+                            </mat-list-item>
+                        </mat-list>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-lg btn-main btn-hover-black shadow-none"> 
+                        Get Started
+                        <mat-icon >play_circle_outline</mat-icon>
+                    </button>
                 </div>
-                <div style="font-size:20px; word-wrap: break-word; margin: 20px 0px;">
-                    <mat-list>
-                        <mat-list-item style="padding: 10px 0">
-                            <span><fa-icon [icon]='faCheckCircle' style="color: #E81C2E; padding:0 20px 0 0"></fa-icon></span>    
-                            <span> Vrei sa-ti fuga masina ca un lamborghini?</span>
-                        </mat-list-item>
-                        <mat-list-item style="padding: 10px 0">
-                            <span><fa-icon [icon]='faCheckCircle' style="color: #E81C2E;padding:0 20px 0 0"></fa-icon></span>    
-                            <span> Nu esti multumit cu masina, si vrei sa o strici de tot?</span>
-                        </mat-list-item>
-                        <mat-list-item style="padding: 10px 0">
-                            <span><fa-icon [icon]='faCheckCircle' style="color: #E81C2E;padding:0 20px 0 0"></fa-icon></span>    
-                            <span> Acum este momentul! Nu ezita sa ne contactati  </span>
-                        </mat-list-item>
-                        <mat-list-item style="padding: 10px 0">
-                            <span><fa-icon [icon]='faCheckCircle' style="color: #E81C2E;padding:0 20px 0 0"></fa-icon></span>    
-                            <span> Da da  </span>
-                        </mat-list-item>
-                    </mat-list>
-                    
+                <div class='col-lg-4 home-items'>
+                    <div class='home-item'>
+                        <fa-icon [icon]='faCar'></fa-icon>
+                    </div>
+                    <div class='home-item'>
+                        <fa-icon [icon]='faMicrochip'></fa-icon>
+                    </div>
+                    <div class='home-item'>
+                        <fa-icon [icon]='faTools'></fa-icon>
+                    </div>
+                    <div class='home-item'>
+                        <fa-icon [icon]='faTachometerAlt'></fa-icon>
+                    </div>
+                    <div class='home-item'>
+                        <fa-icon [icon]='faChartLine'></fa-icon>
+                    </div>
+                    <div class='home-item'>
+                        <fa-icon [icon]='faCalendarCheck'></fa-icon>
+                    </div>
                 </div>
-                <button type="button" class="btn btn-primary btn-lg btn-main btn-hover-black shadow-none"> 
-                    Get Started
-                    <mat-icon>play_circle_outline</mat-icon>
-                </button>
             </div>
-            <div class='col-lg-4 home-items'>
-                <div class='home-item'>
-                    <fa-icon [icon]='faCar'></fa-icon>
+    
+            <div class='row no-gutter' style="margin: 120px 0px">
+                <div class='col-lg-3 col-md-6 service-card'>
+                    <fa-icon [icon]='faCar' style="color: #E81C2E; font-size: 80px;"></fa-icon>
+                    <div class="service-card-title"> Remap </div>
+                    <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                 </div>
-                <div class='home-item'>
-                    <fa-icon [icon]='faMicrochip'></fa-icon>
+                <div class='col-lg-3 col-md-6 service-card'>
+                    <fa-icon [icon]='faCar' style="color: #E81C2E; font-size: 80px;"></fa-icon>
+                    <div class="service-card-title"> Chiptunning </div>
+                    <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                 </div>
-                <div class='home-item'>
-                    <fa-icon [icon]='faTools'></fa-icon>
+                <div class='col-lg-3 col-md-6 service-card'>
+                    <fa-icon [icon]='faCar' style="color: #E81C2E; font-size: 80px;"></fa-icon>
+                    <div class="service-card-title"> Diagnoza </div>
+                    <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                 </div>
-                <div class='home-item'>
-                    <fa-icon [icon]='faTachometerAlt'></fa-icon>
-                </div>
-                <div class='home-item'>
-                    <fa-icon [icon]='faChartLine'></fa-icon>
-                </div>
-                <div class='home-item'>
-                    <fa-icon [icon]='faCalendarCheck'></fa-icon>
+                <div class='col-lg-3 col-md-6 service-card'>
+                    <fa-icon [icon]='faCar' style="color: #E81C2E; font-size: 80px;"></fa-icon>
+                    <div class="service-card-title"> Egr / Dpf off </div>
+                    <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                 </div>
             </div>
         </div>
-
-        <div class='row no-gutter home-section' style="margin-bottom: 60px;">
-            <div class='col-lg-3 col-md-6 service-card'>
-                <fa-icon [icon]='faCar' style="color: #E81C2E; font-size: 80px;"></fa-icon>
-                <div class="service-card-title"> Remap </div>
-                <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-            </div>
-            <div class='col-lg-3 col-md-6 service-card'>
-                <fa-icon [icon]='faCar' style="color: #E81C2E; font-size: 80px;"></fa-icon>
-                <div class="service-card-title"> Chiptunning </div>
-                <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-            </div>
-            <div class='col-lg-3 col-md-6 service-card'>
-                <fa-icon [icon]='faCar' style="color: #E81C2E; font-size: 80px;"></fa-icon>
-                <div class="service-card-title"> Diagnoza </div>
-                <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-            </div>
-            <div class='col-lg-3 col-md-6 service-card'>
-                <fa-icon [icon]='faCar' style="color: #E81C2E; font-size: 80px;"></fa-icon>
-                <div class="service-card-title"> Egr / Dpf off </div>
-                <div> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-            </div>
-        </div>
+        
     </div>
 
 
@@ -179,7 +182,19 @@
             </svg>
         
         </div>
-        <div class='row no-gutter' style="height: 100px; background-color: #E81C2E; width: 100%;"></div>
+        <div class='row no-gutter' style="padding:60px; background-color: #E81C2E; width: 100%;">
+            <div style="width: 70%; margin: 0 auto" class="text-center">
+                <span style="color: black;" class="header-fs header-fw">Hurry up and</span>
+                <span class="header-fs header-fw"> join us!</span>
+                <div style="margin-top: 30px;">
+                    <button type="button" 
+                        class="btn btn-primary btn-lg btn-main btn-hover-white shadow-none" style="background-color: black;"> 
+                        Join us
+                        <mat-icon >play_circle_outline</mat-icon>
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Second section -->
@@ -246,7 +261,7 @@
                         <div style="font-size: 42px; font-weight: bold;">Ce spun clientii nostri</div>
                     </div>
         
-                    <div style="max-width: 60%; margin: 0 auto; min-width: 500px;">
+                    <div class="section">
                         <owl-carousel-o [options]="customOptions">
                             <ng-template carouselSlide>
                                 <div class='col'>
@@ -307,8 +322,6 @@
             </div>
         </div>
     </div>
-
- 
-    
 </div>
 
+<app-footer></app-footer>
