--- a/cartuning/src/app/pageheader/pageheader.component.html
+++ b/cartuning/src/app/pageheader/pageheader.component.html
@@ -6,9 +6,9 @@
     <div class='ph-container '>
         <div class="row no-gutter" style="height: 100%;">
             <div class="ph-title">
-                {{title}}
+                {{pageTitle}}
             </div>
         </div>
-        <div style="width: 70%; height: 8px; margin: 0 auto; top: -4px; position: relative; z-index: 999; background-color: #E81C2E; border-radius: 4px;"></div>
+        <div style="width: 70%; height: 8px; margin: 0 auto; top: -4px; position: relative; z-index: 9; background-color: #E81C2E; border-radius: 4px;"></div>
    </div> 
 </div>
