--- a/cartuning/src/app/aboutus/aboutus.component.html
+++ b/cartuning/src/app/aboutus/aboutus.component.html
@@ -1,3 +1,5 @@
-<div style="height: 100vh; margin-top:68px">
-    <app-pageheader title='Despre Noi'></app-pageheader>
+<div style="height: 100vh;">
+    <app-pageheader pageTitle='Despre Noi'></app-pageheader>
 </div>
+
+<app-footer></app-footer>
