--- a/cartuning/src/app/app.component.html
+++ b/cartuning/src/app/app.component.html
@@ -1,89 +1,37 @@
+<div style="height: 100px;"></div>
+<alert></alert>
 
-  <mat-tab-group 
-    #matTab
-    mat-stretch-tabs>
-    <mat-tab label="Home"> 
-      <app-home></app-home>
-     </mat-tab>
-
-    <mat-tab label="Catalog Tuning">
-      <app-tuning></app-tuning>
-    </mat-tab>
-
-    <mat-tab label="Despre Noi">
-      <app-aboutus></app-aboutus>
-    </mat-tab>
-  </mat-tab-group>
-
-  <!-- Footer -->
-  <footer >
-    <div class='footer'>
-      <div style="width: 70%; height: 8px; margin: 0 auto; top:-4px; position: relative; z-index: 999; background-color: #E81C2E; border-radius: 4px; "></div>
-      <div class="text-center">
-        <img style=" width: 150px; margin-top: 20px;" src='../assets/ets-performance-logo.png'>
-      </div>
-      <div style="color: rgba(255, 255, 255, 0.55); font-size: 14px;"  class="text-center">
-        Etiam consequat sem ullamcorper, euismod metus sit amet, tristique justo.<br> Vestibulum mattis, nisi ut faucibus commodo, risus ex commodo.
-      </div>
-      <div class='footer-overlay'>
-        <!-- <div class='footer-follow-us'>
-          <span style="color:white; font-size: 20px; margin-right: 50px;">  FOLLOW US </span>
-          <div class="footer-brands">
-            <fa-icon [icon]="faFacebook"></fa-icon>
-          </div>
-          <div class="footer-brands">
-            <fa-icon [icon]="faYoutube"></fa-icon>
-          </div>
-          <div class="footer-brands">
-            <fa-icon [icon]="faInstagram"></fa-icon>
-          </div>
-        </div> -->
-
-        <div class='footer-container'>
-
-          <div class='row'>
-            <div class='col-lg-3 col-md-6 col-sm-6 text-center footer-icon-col' style="padding:30px">
-              <mat-icon class="footer-icon" aria-hidden="false" aria-label="Example thumbs up SVG icon">home</mat-icon>
-              <p style="font-size: 14px;">
-                Dumbrava Timis, Romania
-              </p>
-            </div>
-            <div class='col-lg-3 col-md-6 col-sm-6 text-center footer-icon-col' style="padding:30px">
-                <mat-icon class="footer-icon"  aria-hidden="false" aria-label="Example thumbs up SVG icon">phone</mat-icon>
-                <div style="font-size: 14px;">
-                  <div style="font-weight: 900; margin-bottom: 6px;">
-                    0742-164-800
-                  </div>
-                  <div style=" color: #E81C2E;">
-                    Contactati-ne!
-                  </div>
-                </div>
-            </div>
-            <div class='col-lg-3 col-md-6 col-sm-6 text-center footer-icon-col'  style="padding:30px">
-              <mat-icon class="footer-icon" aria-hidden="false" aria-label="Example thumbs up SVG icon">mail</mat-icon>
-              <p style="word-wrap: break-word; font-size: 14px;">
-                ecutuningservices@gmail.com
-              </p>
-            </div>
-            <div class='col-lg-3 col-md-6 col-sm-6 text-center footer-icon-col' style="padding:30px">
-              <mat-icon class="footer-icon" aria-hidden="false" aria-label="Example thumbs up SVG icon">access_time</mat-icon>
-              <div style="font-size: 14px;">
-                <div style="margin-bottom:6px;">
-                  <span style=" color: #E81C2E;">Mo-Sa: </span> <span style="font-weight: 900;">07:00 - 22:00</span>
-                </div>
-                <div>
-                  <span style=" color: #E81C2E;">Su: </span> <span style="font-weight: 900;">07:00 - 22:00</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="footer-end">
-          © 2020 Toate Drepturile Rezervate! - <span style="color: #E81C2E;">ECU Tunning Services</span> - Romania
-        </div>
-      </div>
+<mat-toolbar style="position: fixed; top: 0; z-index: 999;">  
+  <mat-toolbar-row class="section" style="height: 100px;">
+    <img src="../assets/logocaretrebuie-sm.png" style="max-height: 64px;">
+    <div style="flex: 1 1 auto"></div>
+    <a mat-button routerLink='home' style="font-weight: bold;">Home</a>
+    <a mat-button routerLink='tune' style="font-weight: bold;">Catalog Tuning</a>
+    <a mat-button routerLink='about' style="font-weight: bold;">About</a>
     
-    </div>
-  </footer>
+    <!-- 
+      <div style="margin-left:40px; ">
+        <img src="../assets/profile.jpg" style="width: 42px; height: 42px; border-radius: 50%;">
+        <mat-icon style="font-size: 42px; width: 42px; height: 42px;">account_circle</mat-icon>
+      </div> -->
+      <mat-menu #appMenu="matMenu">
+        <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' style="font-weight: bold;">{{"Hello, " + accountService.userValue?.firstName}}</a>
+        <hr *ngIf='accountService.userValue != null' style="margin:0 auto">
+
+        <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user'>Account</a>
+        <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/home' (click)='logout()'>Logout</a>
+        
+        <a mat-menu-item class="outline-none" *ngIf='accountService.userValue == null' routerLink="/account/login">Login</a>
+        <a mat-menu-item class="outline-none" *ngIf='accountService.userValue == null' routerLink="/account/register">Register</a>
+      </mat-menu>
+      
+      <button [matMenuTriggerFor]="appMenu" class="user-btn shadow-none outline-none" style="background: transparent!important; margin-left: 40px;">
+        <img src="{{(accountService.userValue?.avatar != null ? accountService.userValue.avatar : 'assets/testimonials.jpg')}} " style="width: 42px; height: 42px; border-radius: 50%;">
+        <span style="font-size: 16px; margin-left: 8px;">{{accountService.userValue?.username}}</span>
+    </button>
+
+  </mat-toolbar-row>
+  
+</mat-toolbar>
 
 <router-outlet></router-outlet>
