--- a/cartuning/src/app/user/orders/orders.component.html
+++ b/cartuning/src/app/user/orders/orders.component.html
@@ -1,1 +1,47 @@
-<p>orders works!</p>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="width: 100%;">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="brand">
+      <th mat-header-cell *matHeaderCellDef> Brand </th>
+      <td mat-cell *matCellDef="let element"> {{element.brand}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="model">
+      <th mat-header-cell *matHeaderCellDef> Model </th>
+      <td mat-cell *matCellDef="let element"> {{element.model}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="year">
+      <th mat-header-cell *matHeaderCellDef> Year </th>
+      <td mat-cell *matCellDef="let element"> {{element.year}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="engine">
+      <th mat-header-cell *matHeaderCellDef> Engine </th>
+      <td mat-cell *matCellDef="let element"> {{element.engine}} </td>
+    </ng-container>
+
+     <!-- Symbol Column -->
+     <ng-container matColumnDef="clutch">
+        <th mat-header-cell *matHeaderCellDef> Clutch </th>
+        <td mat-cell *matCellDef="let element"> {{element.clutch}} </td>
+      </ng-container>
+
+       <!-- Symbol Column -->
+    <ng-container matColumnDef="ecu">
+        <th mat-header-cell *matHeaderCellDef> Ecu </th>
+        <td mat-cell *matCellDef="let element"> {{element.ecu}} </td>
+      </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+<mat-progress-bar mode="indeterminate" *ngIf='loading'></mat-progress-bar>
