--- a/cartuning/src/styles.css
+++ b/cartuning/src/styles.css
@@ -6,6 +6,8 @@
 
 :root{
   --ets-red: #E81C2E;
+  --ets-dark: #19191b;
+  --ets-blue: #0066ff;
 }
 
 body {
@@ -102,7 +104,7 @@ body {
 
 .section {
   margin: 0 auto;
-  padding: 30px;
+  padding: 30px 0px;
   height: 100%;
 }
 
