--- a/cartuning/src/app/user/orders/orders.component.css
+++ b/cartuning/src/app/user/orders/orders.component.css
@@ -4,3 +4,19 @@
     font-size: 16px;
     font-weight: bold;
 }
+
+mat-basic-chip {
+    outline: none;
+    height: 24px;
+    background: #3f51b5;
+    color: white;
+    border-radius: 12px;
+    padding: 0px 12px;
+    margin-right: 8px;
+    cursor: default;
+}
+
+td.mat-cell {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
