--- a/cartuning/src/app/user/orders/orders.component.html
+++ b/cartuning/src/app/user/orders/orders.component.html
@@ -5,39 +5,47 @@
           The actual rendered columns are set as a property on the row definition" -->
   
     <!-- Position Column -->
-    <ng-container matColumnDef="brand">
-      <th mat-header-cell *matHeaderCellDef> Brand </th>
-      <td mat-cell *matCellDef="let element"> {{element.brand}} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="model">
-      <th mat-header-cell *matHeaderCellDef> Model </th>
-      <td mat-cell *matCellDef="let element"> {{element.model}} </td>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="year">
-      <th mat-header-cell *matHeaderCellDef> Year </th>
-      <td mat-cell *matCellDef="let element"> {{element.year}} </td>
-    </ng-container>
-  
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="engine">
-      <th mat-header-cell *matHeaderCellDef> Engine </th>
-      <td mat-cell *matCellDef="let element"> {{element.engine}} </td>
+    <ng-container matColumnDef="order">
+      <th mat-header-cell *matHeaderCellDef> Order </th>
+      <td mat-cell *matCellDef="let element"> 
+        <div style="font-size: 16px; font-weight: bold; padding: 2px 0px 6px 0px; color: rgba(0,0,0,0.54);">
+          #{{element.id}}
+        </div>
+      </td>
     </ng-container>
 
-     <!-- Symbol Column -->
-     <ng-container matColumnDef="clutch">
-        <th mat-header-cell *matHeaderCellDef> Clutch </th>
-        <td mat-cell *matCellDef="let element"> {{element.clutch}} </td>
-      </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let element"> 
+        <mat-chip> {{element.status}} </mat-chip>
+       </td>
+    </ng-container>
 
-       <!-- Symbol Column -->
-    <ng-container matColumnDef="ecu">
-        <th mat-header-cell *matHeaderCellDef> Ecu </th>
-        <td mat-cell *matCellDef="let element"> {{element.ecu}} </td>
+  
+    <ng-container matColumnDef="summary">
+      <th mat-header-cell *matHeaderCellDef> Summary </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-chip-list aria-label="Fish selection">
+          <mat-basic-chip>{{element.brand}}</mat-basic-chip>
+          <mat-basic-chip>{{element.model}}</mat-basic-chip>
+          <mat-basic-chip>{{element.engine}}</mat-basic-chip>
+          <mat-basic-chip>{{element.year}}</mat-basic-chip>
+        </mat-chip-list> 
+      </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.createdAt | date: 'yyyy/MM/dd HH:mm:ss'}} </td>
+    </ng-container>
+  
+  
+     <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let element"> 
+          <mat-icon style="color: var(--ng-primary); font-size: 30px; margin-right: 12px; cursor: pointer;" matTooltip='Description'>description</mat-icon>
+          <mat-icon style="color: var(--ets-red); font-size: 30px; cursor: pointer;" matTooltip='Delete'>delete</mat-icon>
+        </td>
       </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
