added delete orders functionality, some fake backend fixes

--- a/cartuning/src/app/user/orders/orders.component.css
+++ b/cartuning/src/app/user/orders/orders.component.css
@@ -20,3 +20,7 @@ td.mat-cell {
     padding-top: 24px;
     padding-bottom: 24px;
 }
+
+.mat-snack-bar-container {
+    margin-top: 80px!important;
+ }
