--- a/cartuning/src/app/user/orders/orders.component.html
+++ b/cartuning/src/app/user/orders/orders.component.html
@@ -44,7 +44,7 @@
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let element"> 
           <mat-icon style="color: var(--ng-primary); font-size: 30px; margin-right: 12px; cursor: pointer;" matTooltip='Description'>description</mat-icon>
-          <mat-icon style="color: var(--ets-red); font-size: 30px; cursor: pointer;" matTooltip='Delete'>delete</mat-icon>
+          <mat-icon style="color: var(--ets-red); font-size: 30px; cursor: pointer;" matTooltip='Delete' (click)='deleteOrder(element)'>delete</mat-icon>
         </td>
       </ng-container>
   
