--- a/cartuning/src/app/home/home.component.html
+++ b/cartuning/src/app/home/home.component.html
@@ -280,7 +280,7 @@
                             Power
                         </h2>
                         <span style="color: #333; ">
-                            Measured in Nm or HPMeasured in Nm or HPMeasured in Nm or HPMeasured in Nm or HPMeasured in Nm or HP
+                            Your car will be stronger, developing more horse-power
                         </span>
                     </div>
                    
@@ -295,10 +295,27 @@
                 <div class='col' >
                     <div style="padding: 0px 20px;">
                         <h2>
-                            Speed
+                            Acceleration
                         </h2>
                         <span style="color: #333;">
-                            lorem ipsum lorem ipsumlorem ipsum lorem ipsumlorem ipsumlorem ipsumlore m ipsumlorem ipsum
+                            Your car will be faster, acceleration will be more powerful and the time from 0 to 100 km/h will be shorter
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row no-gutter"  style="height: 200px; padding-left: 40px;">
+                <div class='col-2 text-center'>
+                    <!-- <fa-icon [icon]='faExclamationCircle' style="font-size: 60px;"></fa-icon> -->
+                    <mat-icon class="material-icons-round" style="font-size: 64px; height: 64px; width: 64px;">tune</mat-icon>
+                </div>
+                <div class='col' >
+                    <div style="padding: 0px 20px;">
+                        <h2>
+                            Optimization
+                        </h2>
+                        <span style="color: #333;">
+                            Tuning will be custom, and adapted for each car separately
                         </span>
                     </div>
                 </div>
